--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     ]
   },
   "dependencies": {
-    "@types/node": "^16.3.2",
     "@types/chai": "^4.2.19",
     "@types/mocha": "^8.2.2",
+    "@types/node": "^16.3.2",
     "allure-commandline": "^2.13.8",
     "allure-mocha": "^2.0.0-beta.9",
     "axios": "^0.21.1",
     "chai": "^4.3.4",
     "mocha": "^9.0.2",
+    "mocha-allure-reporter": "^1.4.0",
     "prettier": "^2.3.2",
     "ts-node": "^10.0.0",
     "tslib": "^2.3.0",
